--- a/server/app/static/css/new.css
+++ b/server/app/static/css/new.css
@@ -5,111 +5,136 @@
   outline: none;
   text-decoration: none;
 }
+
 ul {
   list-style: none;
 }
+
 body {
   line-height: 1.5;
-  // font-family: $inter;
-  // color: $black;
 }
+
 .container {
   max-width: 1260px;
   margin: 0 auto;
 }
-// RESETER
 
 .mt-15 {
   margin-top: 15px;
 }
+
 .mt-35 {
   margin-top: 35px;
 }
-// RESETER
 
-// COMMON CSS
 .img-responsive {
   width: 100%;
   height: auto;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
+
 .flex {
   display: flex;
 }
+
 .flex-row {
   display: flex;
   flex-direction: row;
 }
+
 .w-100 {
   width: 100%;
 }
+
 .flex-column {
   display: flex;
   flex-direction: column;
 }
+
 .align-center {
   align-items: center;
 }
+
 .justify-center {
   justify-content: center;
 }
+
 .space-between {
   justify-content: space-between;
 }
+
 .text-center {
   text-align: center;
 }
+
 .f-wrap {
   flex-wrap: wrap;
 }
+
 .grid-2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
+
 .grid-3 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 }
+
 .grid-4 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
+
 .gap-6 {
   gap: 6px;
 }
+
 .gap-10 {
   gap: 10px;
 }
+
 .gap-15 {
   gap: 15px;
 }
+
 .gap-16 {
   gap: 16px;
 }
+
 .gap-20 {
   gap: 20px;
 }
+
 .gap-25 {
   gap: 25px;
 }
+
 .gap-28 {
   gap: 28px;
 }
+
 .gap-30 {
   gap: 30px;
 }
+
 .gap-35 {
   gap: 35px;
 }
+
 .gap-45 {
   gap: 45px;
 }
+
 .gap-50 {
   gap: 50px;
 }
+
 .gap-60 {
   gap: 60px;
 }
+
 .gap-80 {
   gap: 80px;
-}
+}/*# sourceMappingURL=new.css.map */
