--- a/server/app/static/css/style.scss
+++ b/server/app/static/css/style.scss
@@ -449,6 +449,7 @@ a {
         border-radius: 15px;
         img {
           width: 200px;
+          object-fit: contain;
         }
       }
       .workout-name-wrap {
@@ -521,21 +522,23 @@ a {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    gap: 250px;
+    &.gap {
+      gap: 250px;
+    }
     h4 {
       font-family: $monst;
       font-size: 22px;
       font-weight: 400;
       line-height: 17.07px;
       color: #000;
-      width: 100%;
-      word-break: break-all;
+      width: fit-content;
     }
     img {
       width: 40px;
     }
     .exercise-img {
       width: 100px;
+      object-fit: cover;
     }
     &.new {
       justify-content: space-between;
@@ -625,6 +628,17 @@ a {
         font-weight: 400;
         line-height: 29.26px;
         text-align: left;
+        input {
+          border: none;
+          background: none;
+          width: 100px;
+          text-align: center;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-family: $monst;
+          font-size: 25px;
+        }
       }
     }
 
@@ -664,6 +678,11 @@ a {
       width: 100%;
       height: 80vh;
       border-radius: 10px;
+      video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
     .time-duration {
       width: 60%;
@@ -1115,6 +1134,7 @@ a {
       );
       img {
         width: 100px;
+        object-fit: cover;
       }
     }
     .center-wrap {
@@ -1172,7 +1192,9 @@ a {
     line-height: 17.07px;
   }
 }
-
+.turn-text {
+  display: none;
+}
 // EDIT WORKOUT PAGE END HERE
 @media (max-width: 1040px) {
   .container {
@@ -1184,15 +1206,15 @@ a {
     width: 80%;
   }
   .workout-video-page {
-    height: 100%;
+    // height: 100%;
     width: 100%;
     grid-template-columns: 1.4fr 1fr;
     .main-video-wraps {
-      width: 100%;
+      width: fit-content;
       padding: 15px;
       height: 100%;
       .camera-video {
-        height: 90%;
+        height: 100vh;
       }
       .time-duration {
         width: 90%;
@@ -1216,6 +1238,7 @@ a {
       width: 100%;
       position: relative;
       padding: 15px;
+      height: 100vh;
       .workout-name-wrap {
         height: 100%;
         gap: 10px;
@@ -1483,10 +1506,14 @@ a {
     }
     .workout-card {
       width: 95%;
-      padding: 30px;
-      gap: 35px;
+      padding: 27px;
+      &.gap {
+        gap: 35px;
+      }
+
       h4 {
         font-size: 14px;
+        word-break: break-all;
       }
       img {
         width: 23px;
@@ -1554,6 +1581,7 @@ a {
             display: flex;
             align-items: center;
             justify-content: center;
+            font-size: 16px;
           }
         }
       }
@@ -1575,13 +1603,13 @@ a {
   // WORKOUT PAGE END HERE
   // WORKOUT-VIDEO PAGE START HERE
   .workout-video-page {
-    height: 100%;
+    // height: 100%;
     grid-template-columns: 1fr 1fr;
     .main-video-wraps {
       padding: 15px;
       height: 100%;
       .camera-video {
-        height: 100%;
+        height: 90%;
       }
       .time-duration {
         width: 90%;
@@ -1866,4 +1894,16 @@ a {
   }
 
   // EDIT WORKOUT PAGE END HERE
+  .turn-text {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    display: block;
+    font-family: $monst;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 17.07px;
+    color: black;
+    z-index: 99;
+  }
 }
