feat: completed the requirements issues

--- a/server/app/templates/dashboard.html
+++ b/server/app/templates/dashboard.html
@@ -102,7 +102,7 @@
         </div>
         {% endif %}
         <div class="three-btn-wraps">
-          <a href="/workouts">
+          <a href="/workouts/edit">
             <button class="btn">Выбрать другой уровень тренировки</button>
           </a>
           <a href="/workouts/new">
