--- a/server/app/static/css/style.css
+++ b/server/app/static/css/style.css
@@ -1173,6 +1173,7 @@ a {
     width: 80%;
   }
   .workout-video-page {
+    height: 100%;
     width: 100%;
     grid-template-columns: 1.4fr 1fr;
   }
@@ -1183,7 +1184,7 @@ a {
     height: 100%;
   }
   .workout-video-page .main-video-wraps .camera-video {
-    height: 100vh;
+    height: 75vh;
   }
   .workout-video-page .main-video-wraps .time-duration {
     width: 90%;
@@ -1206,7 +1207,7 @@ a {
     width: 100%;
     position: relative;
     padding: 15px;
-    height: 100vh;
+    height: 100%;
   }
   .workout-video-page .video-wraper .workout-name-wrap {
     height: 100%;
@@ -1217,7 +1218,7 @@ a {
     font-size: 16px;
   }
   .workout-video-page .video-wraper .workout-name-wrap .video-wrap {
-    height: 500px;
+    height: 100%;
   }
   .workout-video-page .video-wraper .workout-name-wrap .video-wrap video {
     width: 100%;
@@ -1227,6 +1228,9 @@ a {
   }
   .workout-video-page .video-wraper .workout-name-wrap .btn {
     padding: 11px 38px;
+  }
+  .workout-page .workout-card.gap {
+    gap: 150px;
   }
 }
 @media (max-width: 650px) {
