--- a/server/app/static/css/style.scss
+++ b/server/app/static/css/style.scss
@@ -1206,7 +1206,7 @@ a {
     width: 80%;
   }
   .workout-video-page {
-    // height: 100%;
+    height: 100%;
     width: 100%;
     grid-template-columns: 1.4fr 1fr;
     .main-video-wraps {
@@ -1214,7 +1214,7 @@ a {
       padding: 15px;
       height: 100%;
       .camera-video {
-        height: 100vh;
+        height: 75vh;
       }
       .time-duration {
         width: 90%;
@@ -1238,7 +1238,7 @@ a {
       width: 100%;
       position: relative;
       padding: 15px;
-      height: 100vh;
+      height: 100%;
       .workout-name-wrap {
         height: 100%;
         gap: 10px;
@@ -1247,7 +1247,7 @@ a {
           font-size: 16px;
         }
         .video-wrap {
-          height: 500px;
+          height: 100%;
           video {
             width: 100%;
             height: 100%;
@@ -1259,6 +1259,9 @@ a {
         }
       }
     }
+  }
+  .workout-page .workout-card.gap {
+    gap: 150px;
   }
 }
 @media (max-width: 650px) {
