--- a/server/app/static/css/style.css
+++ b/server/app/static/css/style.css
@@ -1208,6 +1208,7 @@ a {
     position: relative;
     padding: 15px;
     height: 100%;
+    padding-top: 10px;
   }
   .workout-video-page .video-wraper .workout-name-wrap {
     height: 100%;
@@ -1222,7 +1223,7 @@ a {
   }
   .workout-video-page .video-wraper .workout-name-wrap .video-wrap video {
     width: 100%;
-    height: 100%;
+    height: 97%;
     -o-object-fit: cover;
        object-fit: cover;
   }
