--- a/server/app/static/css/style.scss
+++ b/server/app/static/css/style.scss
@@ -1239,6 +1239,7 @@ a {
       position: relative;
       padding: 15px;
       height: 100%;
+      padding-top: 10px;
       .workout-name-wrap {
         height: 100%;
         gap: 10px;
@@ -1250,7 +1251,7 @@ a {
           height: 100%;
           video {
             width: 100%;
-            height: 100%;
+            height: 97%;
             object-fit: cover;
           }
         }
