feat: insert default workouts while registeration

--- a/server/app/templates/edit-workouts.html
+++ b/server/app/templates/edit-workouts.html
@@ -24,15 +24,8 @@
       <div class="container">
         <div class="number-list-wrapper">
           <h3>Тренировки</h3>
-          <div class="workout-number-list">
-            <div class="workout-card gap">
-              <h4>Тренировка № 1</h4>
-              <img src="../static/images/gradient-arrow.svg" alt="" />
-            </div>
-            <div class="workout-card gap">
-              <h4>Тренировка № 2</h4>
-              <img src="../static/images/gradient-arrow.svg" alt="" />
-            </div>
+          <div class="workout-number-list" id="generated-workout-list">
+            <!-- Generated Workouts reside here -->
           </div>
         </div>
         <div class="number-list-wrapper mt-45">
