feat: now the dots are shown in the workouts page

--- a/server/app/templates/workout-start.html
+++ b/server/app/templates/workout-start.html
@@ -1,87 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Workout Start</title>
+    <title>Workouts</title>
+    <link
+      rel="shortcut icon"
+      href="../../static/favicon.ico"
+      type="image/x-icon"
+    />
+    <link href="../../../static/css/style.css" rel="stylesheet" />
+    <link href="../../../static/css/toasts.css" rel="stylesheet" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Workout Start</title>
-  <title>Workouts</title>
-  <link rel="shortcut icon" href="../../static/favicon.ico" type="image/x-icon" />
-  <link href="../../../static/css/style.css" rel="stylesheet" />
-  <link href="../../../static/css/toasts.css" rel="stylesheet" />
+    <script src="../../../static/js/lib.js" type="text/javascript"></script>
+    <script src="../../../static/js/toasts.js" type="text/javascript"></script>
+  </head>
 
-  <script src="../../../static/js/lib.js" type="text/javascript"></script>
-  <script src="../../../static/js/toasts.js" type="text/javascript"></script>
-</head>
+  <body>
+    <!-- WORKOUT VIDEO PAGE START HERE -->
 
-<body>
-  <!-- WORKOUT VIDEO PAGE START HERE -->
+    {% if error %}
+    <script>
+      iziToast.show({
+        color: "red",
+        position: "topRight",
+        message: "{{ error }}",
+        timeout: 10000,
+      });
 
-  {% if error %}
-  <script>
-    iziToast.show({
-      color: "red",
-      position: "topRight",
-      message: "{{ error }}",
-      timeout: 10000,
-    });
-
-    setTimeout(() => {
-      window.location.href = "/dashboard";
-    }, 10000);
-  </script>
-  {%else%}
-  <section class="workout-video-page">
-    <div class="main-video-wraps">
-      <div class="camera-video">
-        <div class="turn-text">
-          Поверните свой телефон
+      setTimeout(() => {
+        window.location.href = "/dashboard";
+      }, 10000);
+    </script>
+    {%else%}
+    <section class="workout-video-page">
+      <div class="main-video-wraps">
+        <div class="camera-video">
+          <div class="turn-text">Поверните свой телефон</div>
+          <video
+            src=""
+            id="video"
+            autoplay
+            muted
+            playsinline
+            class="img-responsive"
+            style="display: none"
+          ></video>
+          <image src="" id="received-image" class="img-responsive"></image>
         </div>
-        <video src="" id="video" autoplay muted playsinline class="img-responsive"></video>
-      </div>
-      <div class="time-duration">
-        <div class="timer-wraps">
-          <img src="../../static/images/timer.svg" alt="timer" />
-          <div class="duration-wrap">
-            <h5 id="time-label">Длительность</h5>
-            <span id="timer">00:00</span>
+        <div class="time-duration">
+          <div class="timer-wraps">
+            <img src="../../static/images/timer.svg" alt="timer" />
+            <div class="duration-wrap">
+              <h5 id="time-label">Длительность</h5>
+              <span id="timer">00:00</span>
+            </div>
+          </div>
+          <div class="timer-wraps">
+            <img src="../../static/images/steps.svg" alt="steps" />
+            <div class="duration-wrap align-center">
+              <h5 type="exercise-name">Повторения</h5>
+              <span id="repetition-count">0</span>
+            </div>
           </div>
         </div>
-        <div class="timer-wraps">
-          <img src="../../static/images/steps.svg" alt="steps" />
-          <div class="duration-wrap align-center">
-            <h5 type="exercise-name">Повторения</h5>
-            <span id="repetition-count">0</span>
+      </div>
+      <div class="video-wraper">
+        <div class="workout-name-wrap">
+          <h5 type="exercise-name">Планка</h5>
+          <div class="video-wrap">
+            <video
+              src=""
+              id="helper-video"
+              autoplay
+              muted
+              playsinline
+              loop
+            ></video>
           </div>
+          <button class="btn" id="complete-btn">Завершить</button>
         </div>
       </div>
-    </div>
-    <div class="video-wraper">
-      <div class="workout-name-wrap">
-        <h5 type="exercise-name">Планка</h5>
-        <div class="video-wrap">
-          <video src="" id="helper-video" autoplay muted playsinline loop></video>
-        </div>
-        <button class="btn" id="complete-btn">Завершить</button>
-      </div>
-    </div>
-  </section>
-  <!-- WORKOUT VIDEO PAGE START HERE -->
+    </section>
+    <!-- WORKOUT VIDEO PAGE START HERE -->
 
-  <script>
-    var idx = {{ idx }};
-    var workout = {{ workout| tojson }};
-    var duration = {{ duration }};
-    var exercise = "{{ exercise }}";
+    <script>
+      var idx = {{ idx }};
+      var workout = {{ workout| tojson }};
+      var duration = {{ duration }};
+      var exercise = "{{ exercise }}";
 
-    if (exercise === "None") {
-      exercise = null;
-    }
-  </script>
+      if (exercise === "None") {
+        exercise = null;
+      }
+    </script>
 
-  {%endif%}
+    {%endif%}
 
-  <script src="../../../static/js/workout-start.js" type="text/javascript"></script>
-</body>
-
+    <script
+      src="../../../static/js/workout-start.js"
+      type="text/javascript"
+    ></script>
+  </body>
 </html>
