--- a/server/app/templates/workout-start.html
+++ b/server/app/templates/workout-start.html
@@ -44,10 +44,9 @@
             autoplay
             muted
             playsinline
-            class="img-responsive"
             style="display: none"
           ></video>
-          <image src="" id="received-image" class="img-responsive"></image>
+          <img src="" id="received-image" class="img-responsive"></img>
         </div>
         <div class="time-duration">
           <div class="timer-wraps">
