--- a/server/app/templates/workouts.html
+++ b/server/app/templates/workouts.html
@@ -124,7 +124,9 @@
           </div>
         </div>
         <div class="btn-wraps">
-          <button class="btn">Назад</button>
+          <button class="btn" onclick="window.location.href = '/dashboard'">
+            Назад
+          </button>
         </div>
       </div>
     </section>
