--- a/server/app/templates/workout-start.html
+++ b/server/app/templates/workout-start.html
@@ -44,9 +44,15 @@
             autoplay
             muted
             playsinline
+            class="img-responsive"
             style="display: none"
           ></video>
-          <img src="" id="received-image" class="img-responsive"></img>
+          <img
+            src=""
+            id="received-image"
+            class="img-responsive"
+            style="display: none"
+          />
         </div>
         <div class="time-duration">
           <div class="timer-wraps">
