--- a/server/app/templates/workout-start.html
+++ b/server/app/templates/workout-start.html
@@ -47,12 +47,7 @@
             class="img-responsive"
             style="display: none"
           ></video>
-          <img
-            src=""
-            id="received-image"
-            class="img-responsive"
-            style="display: none"
-          />
+          <img src="" id="received-image" class="img-responsive" />
         </div>
         <div class="time-duration">
           <div class="timer-wraps">
