--- a/server/app/templates/workout-start.html
+++ b/server/app/templates/workout-start.html
@@ -45,7 +45,7 @@
             muted
             playsinline
             class="img-responsive"
-            style="display: none"
+            hidden
           ></video>
           <img src="" id="received-image" class="img-responsive" />
         </div>
