--- a/server/app/templates/workout-start.html
+++ b/server/app/templates/workout-start.html
@@ -47,7 +47,8 @@
             class="img-responsive"
             style="display: none"
           ></video>
-          <img src="" id="received-image" class="img-responsive" />
+          <!-- <img src="" id="received-image" class="img-responsive" /> -->
+          <canvas id="received-image" class="img-responsive"></canvas>
         </div>
         <div class="time-duration">
           <div class="timer-wraps">
