--- a/server/app/templates/workout-start.html
+++ b/server/app/templates/workout-start.html
@@ -47,8 +47,7 @@
             class="img-responsive"
             style="display: none"
           ></video>
-          <!-- <img src="" id="received-image" class="img-responsive" /> -->
-          <canvas id="received-image" class="img-responsive"></canvas>
+          <img src="" id="received-image" class="img-responsive" />
         </div>
         <div class="time-duration">
           <div class="timer-wraps">
