--- a/server/app/templates/workout-start.html
+++ b/server/app/templates/workout-start.html
@@ -36,6 +36,7 @@
     {%else%}
     <section class="workout-video-page">
       <div class="main-video-wraps">
+        <p class="info-text">Тело должно полностью помещаться в камеру</p>
         <div class="camera-video">
           <div class="turn-text">Поверните свой телефон</div>
           <img src="" id="received-image" class="img-responsive" />
