--- a/server/app/static/css/style.css
+++ b/server/app/static/css/style.css
@@ -1365,14 +1365,13 @@ a {
   }
 
   .workout-video-page .main-video-wraps {
-    width: -moz-fit-content;
-    width: fit-content;
+    width: 100%;
     padding: 15px;
     height: 100%;
   }
 
   .workout-video-page .main-video-wraps .camera-video {
-    height: 95vh;
+    height: 34vw;
   }
 
   .workout-video-page .main-video-wraps .camera-video img {
@@ -1836,18 +1835,19 @@ a {
   }
 
   .workout-video-page .main-video-wraps {
-    padding: 15px;
+    padding: 15px 8px;
     height: 100%;
   }
 
   .workout-video-page .main-video-wraps .camera-video {
-    height: 90%;
+    height: 60vh;
   }
 
   .workout-video-page .main-video-wraps .time-duration {
-    width: 90%;
+    width: 100%;
     margin: auto;
     margin-top: 13px;
+    gap: 5px;
   }
 
   .workout-video-page .main-video-wraps .time-duration .timer-wraps {
@@ -1874,11 +1874,11 @@ a {
   .workout-video-page .video-wraper .workout-name-wrap {
     height: 100%;
     gap: 10px;
-    justify-content: center;
+    justify-content: space-between;
   }
 
   .workout-video-page .video-wraper .workout-name-wrap h5 {
-    font-size: 16px;
+    font-size: 12px;
   }
 
   .workout-video-page .video-wraper .workout-name-wrap .video-wrap {
