--- a/server/app/templates/workout-start.html
+++ b/server/app/templates/workout-start.html
@@ -69,14 +69,7 @@
         <div class="workout-name-wrap">
           <h5 type="exercise-name">Планка</h5>
           <div class="video-wrap">
-            <video
-              src=""
-              id="helper-video"
-              autoplay
-              muted
-              playsinline
-              loop
-            ></video>
+            <img src="" id="helper-video" class="img-responsive" />
           </div>
           <button class="btn" id="complete-btn">Завершить</button>
         </div>
