--- a/server/app/static/css/style.css
+++ b/server/app/static/css/style.css
@@ -1466,7 +1466,7 @@ a {
   }
 
   .workout-video-page .video-wraper .workout-name-wrap .video-wrap {
-    height: 100%;
+    height: 27vw;
   }
 
   .workout-video-page .video-wraper .workout-name-wrap .video-wrap video {
@@ -1474,6 +1474,13 @@ a {
     height: 97%;
     -o-object-fit: cover;
     object-fit: cover;
+  }
+
+  .workout-video-page .video-wraper .workout-name-wrap .video-wrap img {
+    width: 100%;
+    height: 97%;
+    -o-object-fit: contain;
+    object-fit: contain;
   }
 
   .workout-video-page .video-wraper .workout-name-wrap .btn {
