feat: complete but not download

--- a/server/app/templates/workout-start.html
+++ b/server/app/templates/workout-start.html
@@ -71,7 +71,7 @@
           <div class="video-wrap">
             <img src="" id="helper-video" class="img-responsive" />
           </div>
-          <button class="btn" id="complete-btn" disabled>Завершить</button>
+          <button class="btn" id="complete-btn">Завершить</button>
         </div>
       </div>
     </section>
